--- a/proxy/package.json
+++ b/proxy/package.json
@@ -5,12 +5,14 @@
   "main": "api/proxy.js",
   "scripts": {
     "start": "vercel dev",
-    "deploy": "vercel deploy --prod"
+    "deploy": "vercel deploy --prod",
+    "test": "node test.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "http-proxy-middleware": "^3.0.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "vercel": "^33.0.0"
